query_specific_password can get a specific password from a specified username

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,15 @@ project(GantryExt
         LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "-fdeclspec")
 
 add_library(Database SHARED src/database.cpp src/database.h)
 # The .lib files should be found automatically if they are installed in the standard place by the
 # MySQL Connector C++ 64-bit msi installer, typically this is C:\Program Files\MySQL\Connector C++ 8.0\lib64\vs14
 # In addition, to run during development, the dlls should be copied to somewhere on your PATH or the build directory
-target_include_directories(Database PUBLIC "C:/Program Files/MySQL/Connector C++ 8.0/include")
-target_link_directories(Database PUBLIC "C:/Program Files/MySQL/Connector C++ 8.0/lib64/vs14/")
-target_link_libraries(Database PUBLIC mysqlcppconn8 libssl libcrypto)
+target_include_directories(Database PUBLIC "/Users/ivan_the_cheah/Desktop/research/include")
+target_link_directories(Database PUBLIC "/Users/ivan_the_cheah/Desktop/research/lib64")
+target_link_libraries(Database PUBLIC mysqlcppconn8 ssl )
 
 
 add_executable(test_Database src/test_Database.cpp)
